--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Manage rejected promises",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel/register test",
+    "testQ": "mocha ./tests/q-tests.js"
   },
   "keywords": [
     "promises",
@@ -13,10 +14,10 @@
   ],
   "author": "Pablo H. Codeiro",
   "license": "WTFPL",
-  "dependencies": {
-    "q": "^1.4.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel": "^5.5.6",
+    "bluebird": "^2.9.27",
     "mocha": "^2.2.5",
     "should": "^6.0.3"
   }
